[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Enemies/Swarm/SwarmTest.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Enemies/Swarm/SwarmMother.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Enemies/Swarm/Boid.tscn" type="PackedScene" id=3]

[node name="Swarm" type="Node2D"]
script = ExtResource( 1 )

[node name="SwarmMother" parent="." instance=ExtResource( 2 )]

[node name="Boids" type="Node2D" parent="."]

[node name="VectorUpdateTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "Boid" ), [ ExtResource( 3 ) ] ]

[node name="NewBoidTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="VectorUpdateTimer" to="." method="_on_VectorUpdateTimer_timeout"]
[connection signal="timeout" from="NewBoidTimer" to="." method="_on_NewBoidTimer_timeout"]
